<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bilalchips.store_app.signUp">

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:background="@color/Lightwhite"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:ems="10"


        android:hint="@string/Namehint"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:background="@color/Lightwhite"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="textPersonName"

        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"

        android:background="@color/Lightwhite"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:ems="10"

        android:hint="@string/UsernameHint"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/Lightwhite"

        android:drawableLeft="@drawable/ic_https_black_24dp"
        android:drawableStart="@drawable/ic_https_black_24dp"
        android:ems="10"
        android:hint="@string/passwordHint"

        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <EditText
        android:id="@+id/cnfrmPassword"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="26dp"

        android:background="@color/Lightwhite"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_https_black_24dp"
        android:drawableStart="@drawable/ic_https_black_24dp"


        android:ems="10"
        android:hint="@string/ConfirmHint"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/signUpbtn_signupPage"
        android:layout_width="210dp"
        android:layout_height="53dp"
        android:text="Sign up"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="92dp"

        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cnfrmPassword"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintVertical_bias="0.925"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="221dp"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />


</android.support.constraint.ConstraintLayout>
